Fix quotation marks

--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -1049,7 +1049,7 @@
     \textbf{Marginally Stable}
     \begin{itemize}
         \item One or more \textbf{non-repeated} system poles lying on the imaginary axis of the s-plane and no system pole lying on the right half s-plane.
-        \item $h(t)$ will not "blow up" and become unbounded, but neither will it converge to zero as $t$ tends to infinity.\\
+        \item $h(t)$ will not ``blow up'' and become unbounded, but neither will it converge to zero as $t$ tends to infinity.\\
         $\lim_{t \to \infty} |h(t)| \neq \infty$ and $\lim_{t \to \infty} h(t) \neq 0$
     \end{itemize}
 
@@ -1079,7 +1079,7 @@
     \textbf{Unstable (Case 1)}
     \begin{itemize}
         \item One or more system poles lying on the right-half s-plane
-        \item $h(t)$ will "blow up" and become unbounded as $t$ tends to infinity\\
+        \item $h(t)$ will ``blow up'' and become unbounded as $t$ tends to infinity\\
         $\lim_{t \to \infty}|h(t)| = \infty$
     \end{itemize}
 
@@ -1110,7 +1110,7 @@
     \textbf{Unstable (Case 2)}
     \begin{itemize}
         \item One or more repeated system poles lying on the imaginary axis
-        \item $h(t)$ will "blow up" and become unbounded as $t$ tends to infinity\\
+        \item $h(t)$ will ``blow up'' and become unbounded as $t$ tends to infinity\\
         $\lim_{t \to \infty}|h(t)| = \infty$
     \end{itemize}
 
