--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -1225,7 +1225,7 @@
 
     \textbf{8.1 Construction of Bode Plots}
 
-    Need to exxpress (7.23b) in a suitable form for each of the following cases:
+    Need to express (7.23b) in a suitable form for each of the following cases:
     \begin{itemize}
         \item Systems without integrator and differentiator
         \item Systems with differentiators
