--- a/CG2023_cheatsheet.tex
+++ b/CG2023_cheatsheet.tex
@@ -1243,13 +1243,13 @@
     \end{enumerate}
 
     \leavevmode\\
-    \textbf{DC gain ($\tilde{H}(s) = K_{dc}$)}
+    \textbf{1. DC gain ($\tilde{H}(s) = K_{dc}$)}
     \begin{Figure}
         \centering
         \includegraphics[width=\linewidth]{bode_dcGain.png}        
     \end{Figure}
 
-    \textbf{Differentiator ($\tilde{H}(s) = K_d s$)}
+    \textbf{2. Differentiator ($\tilde{H}(s) = K_d s$)}
     \begin{Figure}
         \centering
         \includegraphics[width=\linewidth]{bode_differentiator1.png}        
@@ -1259,25 +1259,25 @@
         \includegraphics[width=\linewidth]{bode_differentiator2.png}        
     \end{Figure}
 
-    \textbf{Integrator ($\tilde{H}(s) = K_i/s$)}
+    \textbf{3. Integrator ($\tilde{H}(s) = K_i/s$)}
     \begin{Figure}
         \centering
         \includegraphics[width=\linewidth]{bode_integrator.png}        
     \end{Figure}
 
-    \textbf{Zero factor ($\tilde{H}(s) = s/z_m + 1$)}
+    \textbf{4. Zero factor ($\tilde{H}(s) = s/z_m + 1$)}
     \begin{Figure}
         \centering
         \includegraphics[width=\linewidth]{bode_zeroFactor.png}        
     \end{Figure}
 
-    \textbf{Pole factor ($\tilde{H}(s) = \frac{1}{s/p_n + 1}$)}
+    \textbf{5. Pole factor ($\tilde{H}(s) = \frac{1}{s/p_n + 1}$)}
     \begin{Figure}
         \centering
         \includegraphics[width=\linewidth]{bode_poleFactor.png}        
     \end{Figure}
 
-    \textbf{2nd-order factor ($\tilde{H}(s) = \frac{\omega_n^2}{s^2+2\zeta\omega_ns + \omega_n^2}$)}
+    \textbf{6. 2nd-order factor ($\tilde{H}(s) = \frac{\omega_n^2}{s^2+2\zeta\omega_ns + \omega_n^2}$)}
     \begin{Figure}
         \centering
         \includegraphics[width=\linewidth]{bode_2ndOrder.png}        
